--- a/Siteweb/Acceuil.html
+++ b/Siteweb/Acceuil.html
@@ -2,10 +2,6 @@
 <html>
 	<head>
 		<title>LANMAKER</title>
-		<style>
-			max-width: 100%;
-			height: 100%;
-		</style>
 		<link rel="stylesheet" type="text/css" href="css/style1.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<script src="scripts/script1.js"></script>
@@ -29,7 +25,7 @@
 					<input class="Inputs" type =" text " name=Pseudo/>
 				<label class="connection"> Mot de passe :</label>  
 					<input class="Inputs" type="password" name="motdepasse">
-				<input type="submit" value="Se connecter"/>
+				<input type="submit" value="Se connecter" onclick="window.location.href='profil.html'"/>
 			</div>
 			
 			<div>
