--- a/Siteweb/Inscription.html
+++ b/Siteweb/Inscription.html
@@ -24,8 +24,8 @@
             <legend>Informations personnelles</legend>
             <TABLE class="table" BORDER="0">
 			<TR><TH>Pseudo</TH><TH><input type="text" name="pseudo" id="pseudo" placeholder="Pseudo" autofocus onblur="verifPseudo(this)"></TH></TR>
-			<TR><TH>Password</TH><TH><input type="text" name="pass" id="password" placeholder="password" onblur="verifPassword(this)"></TH></TR>
-			<TR><TH>Confirmer Password</TH><TH><input type="text" name="Cpass" id="Cpassword" placeholder="Cpassword" onblur="CverifPassword(this)"></TH></TR>
+			<TR><TH>Password</TH><TH><input type="password" name="pass" id="password" placeholder="password" onblur="verifPassword(this)"></TH></TR>
+			<TR><TH>Confirmer Password</TH><TH><input type="password" name="Cpass" id="Cpassword" placeholder="Cpassword" onblur="CverifPassword(this)"></TH></TR>
             <TR><TH>Prenom</TH><TH><input type="text" name="pren" id="prenom" placeholder="Prenom" onblur="verifPrenom(this)"></TH></TR>
 			<TR><TH>Nom</TH><TH><input type="text" name="nom" id="nom" placeholder="Nom" onblur="verifNom(this)"></TH></TR>
             <TR><TH>Age</TH><TH><input type="text" name="age" id="age" value ="18" style="width:157px" placeholder="Âge" onblur="verifAge(this)"></TH></TR>
