--- a/Siteweb/profil.html
+++ b/Siteweb/profil.html
@@ -56,7 +56,10 @@
 				<button class="button" id="but">Favoris</button>
 				<option>League of Legends
 				<option>CS Go
-				<option>Overwatch
+				<option>Overwatch</option>
+				<textarea rows="4" cols="25" id="chat"> </textarea><br>
+				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
+				<p id="phrase"> </p>
 		</div >
 		
 		<div class="profil" id="div2" style="display:none;">
@@ -75,7 +78,10 @@
 				<option>Overwatch
 				<option>Minecraft
 				<option>Dofus
-				<option>World of Warcraft
+				<option>World of Warcraft</option>
+				<textarea rows="4" cols="25" id="chat"> </textarea><br>
+				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
+				<p id="phrase"> </p>
 		</div >
 		
 		<div class="profil" id="div3" style="display:none;">
@@ -96,7 +102,10 @@
 				<option>Dofus
 				<option>World of Warcraft
 				<option>Starcraft
-				<option>GuildWars
+				<option>GuildWars</option>
+				<textarea rows="4" cols="25" id="chat"> </textarea><br>
+				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
+				<p id="phrase"> </p>
 		</div >
 		
 		<div class="profil" id="div4" style="display:none;">
@@ -119,7 +128,10 @@
 				<option>Starcraft
 				<option>GuildWars
 				<option>TeamFortress
-				<option>Paladin
+				<option>Paladin</option>
+				<textarea rows="4" cols="25" id="chat"></textarea><br>
+				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
+				<p id="phrase"> </p>
 		</div >
 		
 		<div class="profil" id="div5" style="display:none;">
@@ -145,7 +157,11 @@
 				<option>Paladin
 				<option>Rainbow six 
 				<option>Diablo
-				<option>For Honor
+				<option>For Honor</option>
+				<textarea rows="4" cols="25" id="chat"></textarea><br>
+				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
+				<p id="phrase"> </p>
+				
 		</div >
 		
 		<footer>
