--- a/Siteweb/profil.html
+++ b/Siteweb/profil.html
@@ -57,9 +57,9 @@
 				<option>League of Legends
 				<option>CS Go
 				<option>Overwatch</option>
-				<textarea rows="4" cols="25" id="chat"> </textarea><br>
+				<textarea rows="4" cols="25" class="chat"> </textarea><br>
 				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
-				<p id="phrase"> </p>
+				<p class="phrase"> </p>
 		</div >
 		
 		<div class="profil" id="div2" style="display:none;">
@@ -79,9 +79,9 @@
 				<option>Minecraft
 				<option>Dofus
 				<option>World of Warcraft</option>
-				<textarea rows="4" cols="25" id="chat"> </textarea><br>
+				<textarea rows="4" cols="25" class="chat"> </textarea><br>
 				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
-				<p id="phrase"> </p>
+				<p class="phrase"> </p>
 		</div >
 		
 		<div class="profil" id="div3" style="display:none;">
@@ -103,9 +103,9 @@
 				<option>World of Warcraft
 				<option>Starcraft
 				<option>GuildWars</option>
-				<textarea rows="4" cols="25" id="chat"> </textarea><br>
+				<textarea rows="4" cols="25" class="chat"> </textarea><br>
 				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
-				<p id="phrase"> </p>
+				<p class="phrase"> </p>
 		</div >
 		
 		<div class="profil" id="div4" style="display:none;">
@@ -129,9 +129,9 @@
 				<option>GuildWars
 				<option>TeamFortress
 				<option>Paladin</option>
-				<textarea rows="4" cols="25" id="chat"></textarea><br>
+				<textarea rows="4" cols="25" class="chat"></textarea><br>
 				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
-				<p id="phrase"> </p>
+				<p class="phrase"> </p>
 		</div >
 		
 		<div class="profil" id="div5" style="display:none;">
@@ -158,9 +158,9 @@
 				<option>Rainbow six 
 				<option>Diablo
 				<option>For Honor</option>
-				<textarea rows="4" cols="25" id="chat"></textarea><br>
+				<textarea rows="4" cols="25" class="chat"></textarea><br>
 				<input type="submit" value="Envoyer" id="send" onclick="envoyer()"></input><br>
-				<p id="phrase"> </p>
+				<p class="phrase"> </p>
 				
 		</div >
 		
