--- a/Siteweb/Acceuil.html
+++ b/Siteweb/Acceuil.html
@@ -13,14 +13,14 @@
 			<div class="center">
 				<h1>LANMAKER</h1>
 				<input class="button" type="submit" value="Inscription" onclick="window.location.href='Inscription.html'"/></br></br>
-				<input class="button" type="submit" value="Connexion" onclick="connect()"/>
+				<button class="button" id="connect" type="submit" value="Connexion">Connexion</button>
 			</div>
 			<img class="image" src="css/images/LAN.png"/>
 		</header>
 		
 		<section class="text">
 		
-			<div id="divConnect" style="display:none;">
+			<div id="divConnect" style="display:none">
 				<label class="connection"> Pseudo :</label>
 					<input class="Inputs" type =" text " name=Pseudo/>
 				<label class="connection"> Mot de passe :</label>  
@@ -54,6 +54,9 @@
 			<P> LANMAKER by Sébastien Larouche et Mathieu-Victor Guérin</p>
 		</footer>
 		
+		<script src="scripts/jquery-3.2.0.min.js"></script>
+		<script src="scripts/jquery-ui.min.js"></script>
+		<script src="scripts/jqScripts.js"></script>
 		<script src="scripts/script1.js"></script>
 		
 	</body>
