--- a/Siteweb/profil.html
+++ b/Siteweb/profil.html
@@ -53,7 +53,7 @@
 				<label>Vyk_tors@hotmail.com</label>
 			</div>
 				<h1 id="t1">Intérêts du correspondant</h1>
-				<button class="button" id="but">Favoris</button>
+				<button class="button" id="fav">Favoris</button>
 				<option>League of Legends
 				<option>CS Go
 				<option>Overwatch</option>
@@ -72,7 +72,7 @@
 				<label>Zyr_bak@hotmail.com</label>
 			</div>
 				<h1 id="t1">Intérêts du correspondant</h1>
-				<button class="button" id="but">Favoris</button>
+				<button class="button" id="fav">Favoris</button>
 				<option>League of Legends
 				<option>CS Go
 				<option>Overwatch
@@ -94,7 +94,7 @@
 				<label>Such_Game@hotmail.com</label>
 			</div>
 				<h1 id="t1">Intérêts du correspondant</h1>
-				<button class="button" id="but">Favoris</button>
+				<button class="button" id="fav">Favoris</button>
 				<option>League of Legends
 				<option>CS Go
 				<option>Overwatch
@@ -118,7 +118,7 @@
 				<label>Goat_simul@hotmail.com</label>
 			</div>
 				<h1 id="t1">Intérêts du correspondant</h1>
-				<button class="button" id="but">Favoris</button>
+				<button class="button" id="fav">Favoris</button>
 				<option>League of Legends
 				<option>CS Go
 				<option>Overwatch
@@ -144,7 +144,7 @@
 				<label>Martin_Luther@hotmail.com</label>
 			</div>
 				<h1 id="t1">Intérêts du correspondant</h1>
-				<button class="button" id="but">Favoris</button>
+				<button class="button" id="fav">Favoris</button>
 				<option>League of Legends
 				<option>CS Go
 				<option>Overwatch
@@ -168,6 +168,9 @@
 			<P> LANMAKER by Sébastien Larouche et Mathieu-Victor Guérin </p>
 		</footer>
 		
+		<script src="scripts/jquery-3.2.0.min.js"></script>
+		<script src="scripts/jquery-ui.min.js"></script>
+		<script src="scripts/jqScripts.js"></script>
 		<script src="scripts/script1.js"></script>
 	</body>
 </html>
