--- a/Siteweb/Inscription.html
+++ b/Siteweb/Inscription.html
@@ -42,6 +42,9 @@
 			<P> LANMAKER by Sébastien Larouche et Mathieu-Victor Guérin </p>
 		</footer>
 		
+		<script src="scripts/jquery-3.2.0.min.js"></script>
+		<script src="scripts/jquery-ui.min.js"></script>
+		<script src="scripts/jqScripts.js"></script>
 		<script src="scripts/script1.js"></script>
 	</body>
 </html>
