--- a/Siteweb/Acceuil.html
+++ b/Siteweb/Acceuil.html
@@ -11,7 +11,7 @@
 		<header>
 			<img class="image" src="css/images/LAN.png"/>
 			<div class="center">
-				<h1>LANMAKER</h1>
+				<h1 id="acceuil" style="display:none">LANMAKER</h1>
 				<input class="button" type="submit" value="Inscription" onclick="window.location.href='Inscription.html'"/></br></br>
 				<button class="button" id="connect" type="submit" value="Connexion">Connexion</button>
 			</div>
