--- a/Siteweb/Inscription.html
+++ b/Siteweb/Inscription.html
@@ -11,7 +11,7 @@
 		<header>
 			<img class="image" src="css/images/LAN.png"/>
 			<div class="center">
-				<p>Bienvenu sur la page d'inscription de LANMAKER, ici vous pourrez créé votre compte et choisir vos point d'intéret</p>
+				<p>Bienvenue sur la page d'inscription de LANMAKER, ici vous pouvez créer votre compte et choisir vos centres d'intérêt!</p>
 			</div>
 			<img class="image" id="phone" src="css/images/LAN.png"/>
 		</header>
