--- a/Siteweb/profil.html
+++ b/Siteweb/profil.html
@@ -39,7 +39,7 @@
 		</div>
 		
 		<div id="space">
-			<button class="button" onclick="mix();">MIX</button><br><br>
+			<button class="button" id="mix" onclick="mix();">MIX</button><br><br>
 			<input class="button" type="submit" value="Acceuil" onclick="window.location.href='Acceuil.html'"/>
 		</div>
 		
@@ -172,5 +172,6 @@
 		<script src="scripts/jquery-ui.min.js"></script>
 		<script src="scripts/jqScripts.js"></script>
 		<script src="scripts/script1.js"></script>
+		
 	</body>
 </html>
